Release history for Dist-Zilla-Plugin-Prereqs-Soften

{{$NEXT}}
 - Remove usage of dztest. Ironic, seeing this module is where I invented that. So many regrets.

 [Dependencies::Stats]
 - Dependencies changed since 0.006001, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - test: +2 -1 (recommends: +1)

0.006001 2015-10-03T10:40:00Z f0f58f0
 [Bugfix]
 - Fix Lack of validation in copy_to leads to silently dead code paths. ( closes GH #4 )

 [Dependencies::Stats]
 - Dependencies changed since 0.006000, see misc/*.deps* for details
 - develop: +5 ↑3 -2 (suggests: ↑2)

0.006000 2015-02-28T05:31:26Z e430196
 [Dependencies::Stats]
 - Dependencies changed since 0.005001, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +10 ↑2 -3 (recommends: +1, suggests: ↑2)
 - runtime: ↓1 (recommends: +1 -1)
 - test: +1 (recommends: ↑1 ↓1)

 [Features]
 - Can now specify to_relationship = none. This is useful in conjunction with copy_to to move phases. Its admittedly
   awkward syntax, but I need to re-write half the internals now because YAGNI made them too simple earlier, and now
   IGNI.

0.005001 2014-09-29T14:03:18Z
 [Bugfix]
 - Dont fail with newer OptionalFaetures due to test subsequently needing a Makefile.PL to work

 [Dependencies::Stats]
 - Dependencies changed since 0.005000, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - test: (recommends: +1)

0.005000 2014-09-10T22:29:32Z
 [00 Minor]
 - Internals tweaked to be more modern
 - Metadata updated
 - Tests simplified.

 [Dependencies::Stats]
 - Dependencies changed since 0.004002, see misc/*.deps* for details
 - develop: +1 ↑1 (suggests: ↑2)
 - runtime: +1
 - test: +1 -3 (recommends: ↑1)

 [Internals]
 - dump_config implemented with DZU:ConfigDumper

 [Metadata]
 - Author = kentnl

 [Tests]
 - internal lib/dztest now nuked in favour of DZPT:KENTNL:dztest, which was inspired by this code.

0.004002 2014-08-15T21:18:48Z
 [00 Trivial]
 - CPANDAY!
 - whitespace adjusted
